src/index.css
html,
body {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
  font-family: 'Nunito', sans-serif;
}

.container {
  display: flex;
}

.navbar {
  width: 30%;
  height: 100vh;
  display: flex;
  justify-content: center;
  background: #2e313a;
  color: #a2a0a5;
  font-weight: bold;
  font-family: inherit;
  letter-spacing: 1.2px;
}

.content {
  width: 80%;
  height: 100vh;
  background: #23252c;
  overflow: scroll;
}

.heading {
  margin: 15px;
  font-size: 20px;
  cursor: pointer;
  text-align: center;
  width: 100%;
}

.headings {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.social-icons {
  display: flex;
  width: 35%;
  justify-content: space-evenly;
  margin-top: 20px;
}

.icon {
  padding: 15px;
}

.social-icon:hover {
  transform: scale(1.2);
}

.profile {
  background-color: #23252c;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  background-color: #23252c;
}

.name {
  font-size: 30px;
  font-weight: bold;
  font-family: inherit;
}

.selected-nav {
  transition: all 0.3s ease-in-out;
  color: #c8ff00;
  font-weight: bold;
}

.skill {
  color: #fff;
  font-size: 16.5px;
  line-height: 1.9rem;
  letter-spacing: 0.05rem;
}

.content-container {
  padding: 20px;
  padding-left: 40px;
}

.project-container {
  padding: 10px;
  border-radius: 2px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  transition: all 0.3s ease-in-out;
  color: #a2a0a5;
}

.project {
  font-size: 25px;
  font-weight: bold;
  color: inherit;
}

.project-container:hover {
  cursor: pointer;
}

a {
  text-decoration: none;
}

.about {
  padding: 20px;
}

.circle {
  border-radius: 50%;
}

.animated:hover {
  width: 100%;
  transition: all 0.3s ease-in-out;
  color: #c8ff00;
}

.font-blue {
  color: #a2a0a5;
}

.header-title {
  padding: 0.5em 0.7em;
  font-size: 1.4rem;
  border-left: 7px solid #c8ff00;
  background-color: #2e313a;
  margin-bottom: 2em;
  color: #fff;
  font-family: inherit;
}

.profile-headline {
  padding-top: 2.5em;
  font-size: 2.3rem;
  color: #c8ff00;
  margin: 0;
  margin-bottom: 0.8em;
}

.profile-job {
  font-size: 3.7rem;
  color: #c8ff00;
  margin: 0;
  margin-bottom: 0.8em;
}

.profile-desc {
  font-size: 16.5px;
  line-height: 1.9rem;
  letter-spacing: 0.05rem;
  width: 250px;
  line-height: 1.4em;
  margin-bottom: 3em;
  color: #a2a0a5;
}

.profile-buttons {
  font-family: inherit;
  font-weight: bolder;
  margin-right: 2em;
  padding: 0.5em 1.3em;
  background-color: transparent;
  border: 2px solid #fff;
  font-size: 1.02rem;
  text-transform: uppercase;
  color: #fff;
}

.profile-buttons:hover {
  transition: all 0.3s ease-in-out;
  background: white;
  color: #23252c;
  cursor: pointer;
}

.profession {
  color: #a2a0a5;
  font-size: 16.5px;
  line-height: 1.9rem;
  letter-spacing: 0.05rem;
}

.education-container {
  display: flex;
  flex-direction: column;
  width: 40.5%;
  margin-top: 2em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.box-wrapper {
  border: 2px solid #a2a0a5;
  width: 100%;
  padding: 2em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
}

.education-title {
  color: #fff;
  font-size: 16.5px;
  line-height: 1.9rem;
  letter-spacing: 0.05rem;
}

.education-label {
  text-align: center;
  border-bottom: 3px solid #c8ff00;
  margin-bottom: 1.5em;
  font-size: 1.4rem;
  color: #fff;
}

.dash {
  display: block;
  width: 50px;
  height: 3px;
  background-color: #c8ff00;
}

.place {
  color: #a2a0a5;
  font-size: 16.5px;
  line-height: 1.9rem;
  letter-spacing: 0.05rem;
}

.year {
  color: #a2a0a5;
  font-size: 16.5px;
  line-height: 1.9rem;
  letter-spacing: 0.05rem;
}

.skills-content-bar-value {
  text-align: right;
  padding: 4px 0;
  background-color: #c8ff00;
}

.skills-content-bar {
  width: 100%;
  background-color: #a2a0a5;
  margin-bottom: 1.5em;
}

.brand {
  padding: 0 10px;
  font-size: 3rem;
  border: 3px double #c8ff00;
  padding: 20px 8px;
  color: #a2a0a5;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  text-align: center;
  margin-bottom: 150px;
}

.brand:hover {
  color: #c8ff00;
  border-color: #c8ff00;
}

.nav-container {
  display: flex;
  flex-direction: column;
}

.showcase {
  padding: 20px;
  display: grid;
  grid-template-columns: auto auto;
}

.projects-content-showcase-btns {
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  position: absolute;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  opacity: 0;
}

.projects-content-showcase-btns:hover {
  opacity: 100;
  transition: all 0.3s ease-in-out;
  background-color: rgba(0, 0, 0, 0.75);
  border: none;
}

.btn {
  padding: 0.5em 1.3em;
  background-color: transparent;
  border: 2px solid #fff;
  color: #fff;
  font-size: 1.02rem;
  text-transform: uppercase;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

.btn:hover {
  transition: all 0.3s ease-in-out;
  background: white;
  color: #23252c;
  cursor: pointer;
}

.icon {
  color: #c8ff00;
}

.medium {
  height: 20px;
  width: 20px;
}

.contact-line {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding-bottom: 1.5em;
  margin-bottom: 1.5em;
  border-bottom: 2px solid #c8ff00;
}

.contact-wrapper {
  padding: 2em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  margin-top: 5em;
  background-color: #23252c;
  border: 2px solid #a2a0a5;
  width: 60%;
  margin-left: 2em;
}

.project-list {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0 3.5em;
}

.list-item {
  margin-right: 1.5em;
  color: #a2a0a5;
  font-size: 1.15rem;
}

.active {
  color: #c8ff00;
}

.social-icon-wrapper {
  width: 15vw;
  display: flex;
  margin-top: 8em;
  justify-content: space-around;
}

.icon-path {
  fill: #a2a0a5;
}

.icon-path:hover {
  cursor: pointer;
  fill: #c8ff00;
}

.project-name {
  color: #fff;
  font-size: 2rem;
  font-weight: bolder;
  margin: 10px 0;
}

.project-desc {
  margin: 0;
  color: #a2a0a5;
  font-size: 1rem;
}

